update image path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 
 <div class="container" *ngIf="weatherdata">
   <div class="upper-data">
-    <img src="../assets/images/hot.jpg" *ngIf="weatherdata.main.temp > 15">
-    <img src="../assets/images/cold.jpg" *ngIf="weatherdata.main.temp < 15">
+    <img src="/assets/images/hot.jpg" *ngIf="weatherdata.main.temp > 15">
+    <img src="/assets/images/cold.jpg" *ngIf="weatherdata.main.temp < 15">
 
     <div class="weather-data">
       <div class="location">{{weatherdata.name}}</div>
